added/mob version

--- a/public/index.html
+++ b/public/index.html
@@ -226,7 +226,8 @@
             class="w-[108px] h-[68px] lg:w-[255px] lg:h-40 rotate-[25deg] absolute z-20 right-5 top-10"
           />
           <div
-            class="-mb-20 relative z-10 text-center bg-union bg-no-repeat bg-cover pb-18 pt-7"
+            class="-mb-20 relative z-10 text-center bg-no-repeat bg-cover pb-18 pt-7"
+            style="background-image: url('./assets/images/union.png')"
           >
             <h2
               class="text-[28px] sm:text-4xl lg:text-5xl font-extrabold text-white"
