--- a/public/index.html
+++ b/public/index.html
@@ -30,16 +30,16 @@
 
     <!-- HEADER -->
     <header
-      class="max-w-base mx-auto sticky top-0 z-50 pt-5 sm:pt-8 2xl:pt-14 px-3"
+      class="max-w-base mx-auto sticky top-0 z-50 pt-5 sm:pt-8 2xl:pt-14 px-1"
     >
       <nav
-        class="2xl:h-35.5 flex-between bg-brand-whitish/10 backdrop-blur-2xl rounded-[35px] px-3.5 sm:px-6 2xl:px-12"
+        class="2xl:h-35.5 flex-between bg-brand-whitish/10 backdrop-blur-2xl rounded-[35px] px-2 sm:px-6 2xl:px-12"
       >
         <a href="#">
           <img
             src="./assets/images/logo.png"
             alt="Logo"
-            class="h-8 w-16 sm:h-20 sm:w-40 2xl:h-32 2xl:w-auto my-auto shrink-0"
+            class="h-12 w-24 sm:h-20 sm:w-40 2xl:h-32 2xl:w-auto my-auto shrink-0"
           />
         </a>
 
@@ -78,7 +78,7 @@
           </button>
           <a
             href="tel:+79203555666"
-            class="h-5 sm:h-8 2xl:h-12 shrink-0 bg-gold flex-center text-[8px] sm:text-base 2xltext-2xl font-bold text-white rounded-[10px] shadow-gold cursor-pointer px-5"
+            class="h-5 sm:h-8 2xl:h-12 shrink-0 bg-gold flex-center text-[8px] sm:text-base 2xltext-2xl font-bold text-white rounded-[10px] shadow-gold cursor-pointer px-2 2xl:px-5"
           >
             +7 920 3 555 666
           </a>
@@ -739,6 +739,18 @@
           </div>
         </div>
       </section>
+
+      <!-- Contacts -->
+      <div class="flex gap-6">
+        <div class="rounded-[50px] overflow-hidden">
+          <iframe
+            src="https://yandex.ru/map-widget/v1/?um=constructor%3A3df2d4606e7c2f8972b88235983dfa7ac617dad91f004b116ee8a759b4b73e88&amp;source=constructor"
+            width="950"
+            height="571"
+            frameborder="0"
+          ></iframe>
+        </div>
+      </div>
     </main>
 
     <!-- Swiper JS -->
