--- a/public/index.html
+++ b/public/index.html
@@ -741,16 +741,33 @@
       </section>
 
       <!-- Contacts -->
-      <div class="flex gap-6">
-        <div class="rounded-[50px] overflow-hidden">
-          <iframe
-            src="https://yandex.ru/map-widget/v1/?um=constructor%3A3df2d4606e7c2f8972b88235983dfa7ac617dad91f004b116ee8a759b4b73e88&amp;source=constructor"
-            width="950"
-            height="571"
-            frameborder="0"
-          ></iframe>
+      <section id="contacts" class="relative z-10 py-20">
+        <div
+          class="h-100 2xl:h-auto max-w-base mx-auto flex flex-col md:flex-row gap-6 px-3"
+        >
+          <div
+            class="h-100 2xl:h-auto w-full md:w-100 flex flex-col gap-5 items-center justify-center bg-white/5 rounded-3xl 2xl:rounded-[50px] text-xl md:text-2xl text-white font-medium font-sf"
+          >
+            <a
+              href="tel:+7 920 3 555 666"
+              class="hover:text-amber-300 smooth-200"
+              >+7 920 3 555 666</a
+            >
+            <p>Г. Иваново ул.Фрунзе д. 5</p>
+          </div>
+          <div
+            class="w-full md:flex-1 rounded-3xl 2xl:rounded-[50px] overflow-hidden"
+          >
+            <iframe
+              src="https://yandex.ru/map-widget/v1/?um=constructor%3A3df2d4606e7c2f8972b88235983dfa7ac617dad91f004b116ee8a759b4b73e88&amp;source=constructor"
+              width="950"
+              height="571"
+              class="w-full h-125 2xl:h-auto"
+              frameborder="0"
+            ></iframe>
+          </div>
         </div>
-      </div>
+      </section>
     </main>
 
     <!-- Swiper JS -->
