--- a/public/index.html
+++ b/public/index.html
@@ -636,12 +636,12 @@
         <img
           src="./assets/images/ellipse-left.png"
           alt="Image"
-          class="absolute left-0 bottom-0"
+          class="absolute size-45 sm:size-55 md:size-65 lg:size-80 2xl:size-auto left-0 bottom-0"
         />
         <img
           src="./assets/images/ellipse-right.png"
           alt="Image"
-          class="absolute right-0 top-0"
+          class="absolute size-45 sm:size-55 md:size-65 lg:size-80 2xl:size-auto right-0 top-0"
         />
         <div class="max-w-base mx-auto px-3 md:px-20 lg:px-3">
           <div
