--- a/public/index.html
+++ b/public/index.html
@@ -753,7 +753,11 @@
               class="hover:text-amber-300 smooth-200"
               >+7 920 3 555 666</a
             >
-            <p>Г. Иваново ул.Фрунзе д. 5</p>
+            <a
+              href="https://yandex.uz/maps/-/CHw0FNNF"
+              class="hover:text-amber-300 smooth-200"
+              >Г. Иваново ул.Фрунзе д. 5</a
+            >
           </div>
           <div
             class="w-full md:flex-1 rounded-3xl 2xl:rounded-[50px] overflow-hidden"
