--- a/public/index.html
+++ b/public/index.html
@@ -35,16 +35,16 @@
       <nav
         class="2xl:h-35.5 flex-between bg-brand-whitish/10 backdrop-blur-2xl rounded-[35px] px-2 sm:px-6 2xl:px-12"
       >
-        <a href="#" class="hidden sm:block">
+        <a href="#">
           <img
             src="./assets/images/logo.png"
             alt="Logo"
-            class="h-10 w-20 sm:h-20 sm:w-40 2xl:h-32 2xl:w-auto my-auto shrink-0"
+            class="h-12 w-24 sm:h-20 sm:w-40 2xl:h-32 2xl:w-auto my-auto shrink-0"
           />
         </a>
 
         <ul
-          class="flex items-center gap-2.5 sm:gap-5 2xl:gap-14 text-[9px] sm:text-base 2xl:text-2xl text-brand-gray"
+          class="flex items-center gap-2.5 sm:gap-5 2xl:gap-14 text-[9px] sm:text-sm 2xl:text-2xl text-brand-gray"
         >
           <li>
             <a href="#services" class="hover:text-amber-300 smooth-200"
@@ -56,26 +56,18 @@
               >Отзывы</a
             >
           </li>
-          <li class="hidden sm:block">
+          <li>
             <a href="#about" class="hover:text-amber-300 smooth-200">О нас</a>
           </li>
-          <li class="hidden sm:block">
+          <li>
             <a href="#contacts" class="hover:text-amber-300 smooth-200"
               >Контакты</a
             >
           </li>
         </ul>
 
-        <a href="#" class="sm:hidden">
-          <img
-            src="./assets/images/logo.png"
-            alt="Logo"
-            class="h-10 w-20 sm:h-20 sm:w-40 2xl:h-32 2xl:w-auto my-auto shrink-0"
-          />
-        </a>
-
         <div class="flex items-center gap-1.5 sm:gap-3 2xl:gap-8">
-          <button
+          <!-- <button
             class="size-6 sm:size-10 2xl:size-14 shrink-0 bg-gold flex-center rounded-full shadow-gold cursor-pointer"
           >
             <img
@@ -83,7 +75,7 @@
               alt="heart"
               class="size-4.25 sm:size-5 2xl:size-auto"
             />
-          </button>
+          </button> -->
           <a
             href="tel:+79203555666"
             class="h-5 sm:h-8 2xl:h-12 shrink-0 bg-gold flex-center text-[8px] sm:text-base 2xltext-2xl font-bold text-white rounded-[10px] shadow-gold cursor-pointer px-2 2xl:px-5"
