--- a/public/index.html
+++ b/public/index.html
@@ -33,18 +33,18 @@
       class="max-w-base mx-auto sticky top-0 z-50 pt-5 sm:pt-8 2xl:pt-14 px-1"
     >
       <nav
-        class="2xl:h-35.5 flex-between bg-brand-whitish/10 backdrop-blur-2xl rounded-[35px] px-2 sm:px-6 2xl:px-12"
+        class="2xl:h-35.5 flex-between bg-brand-whitish/10 backdrop-blur-2xl rounded-[35px] px-1 py-1 sm:px-6 2xl:px-12"
       >
         <a href="#">
           <img
             src="./assets/images/logo.png"
             alt="Logo"
-            class="h-12 w-24 sm:h-20 sm:w-40 2xl:h-32 2xl:w-auto my-auto shrink-0"
+            class="hidden sm:block h-12 w-24 sm:h-20 sm:w-40 2xl:h-32 2xl:w-auto my-auto shrink-0"
           />
         </a>
 
         <ul
-          class="flex items-center gap-2.5 sm:gap-5 2xl:gap-14 text-[9px] sm:text-sm 2xl:text-2xl text-brand-gray"
+          class="sm:hidden flex items-center gap-2.5 sm:gap-5 2xl:gap-14 text-[9px] sm:text-sm 2xl:text-2xl text-brand-gray"
         >
           <li>
             <a href="#services" class="hover:text-amber-300 smooth-200"
@@ -56,6 +56,42 @@
               >Отзывы</a
             >
           </li>
+        </ul>
+
+        <ul
+          class="hidden sm:flex items-center gap-2.5 sm:gap-5 2xl:gap-14 text-[9px] sm:text-sm 2xl:text-2xl text-brand-gray"
+        >
+          <li>
+            <a href="#services" class="hover:text-amber-300 smooth-200"
+              >Услуги</a
+            >
+          </li>
+          <li>
+            <a href="#reviews" class="hover:text-amber-300 smooth-200"
+              >Отзывы</a
+            >
+          </li>
+          <li>
+            <a href="#about" class="hover:text-amber-300 smooth-200">О нас</a>
+          </li>
+          <li>
+            <a href="#contacts" class="hover:text-amber-300 smooth-200"
+              >Контакты</a
+            >
+          </li>
+        </ul>
+
+        <a href="#">
+          <img
+            src="./assets/images/logo.png"
+            alt="Logo"
+            class="sm:hidden h-12 w-24 sm:h-20 sm:w-40 2xl:h-32 2xl:w-auto my-auto shrink-0"
+          />
+        </a>
+
+        <ul
+          class="sm:hidden flex items-center gap-2.5 sm:gap-5 2xl:gap-14 text-[9px] sm:text-sm 2xl:text-2xl text-brand-gray"
+        >
           <li>
             <a href="#about" class="hover:text-amber-300 smooth-200">О нас</a>
           </li>
@@ -94,25 +130,27 @@
           class="max-w-base max-h-[47.5rem] mx-auto flex items-stretch gap-7 mt-9 px-3 md:px-20 lg:px-3"
         >
           <div
-            class="flex-1 bg-white/5 shadow-hero backdrop-blur-[48px] sm:border border-white rounded-[50px] p-8 sm:p-10 2xl:py-16.75 2xl:px-13.5"
+            class="flex-1 flex flex-col justify-baseline 2xl:justify-start bg-white/5 shadow-hero backdrop-blur-[48px] sm:border border-white rounded-[50px] p-8 sm:p-10 2xl:py-16.75 2xl:px-13.5"
           >
-            <h1
-              class="font-semibold text-xl sm:text-4xl 2xl:text-[64px] text-white leading-[1.2]"
-            >
-              Сделай свой
-              <span class="bg-gold rounded-[35px] px-2">автомобиль</span>
-              первым среди равных!
-            </h1>
+            <div>
+              <h1
+                class="font-semibold text-xl sm:text-4xl 2xl:text-[64px] text-white leading-[1.2]"
+              >
+                Сделай свой
+                <span class="bg-gold rounded-[35px] px-2">автомобиль</span>
+                первым среди равных!
+              </h1>
 
-            <p
-              class="max-w-[866px] text-xs xs:text-sm sm:text-lg md:text-xl lg:text-2xl xl:text-[32px] text-brand-gray-100 mt-4"
-            >
-              Мы подберём для вашего автомобиля только лучшее. Плёнку, которая
-              идеально подчеркнёт форму кузова. Тонировку, которая будет не
-              только стильной, но и максимально функциональной. Шлифовку и
-              полировку, которая вернёт лаку глубину, блеск или наоборот —
-              матовую элегантность.
-            </p>
+              <p
+                class="max-w-[866px] text-xs xs:text-sm sm:text-lg md:text-xl lg:text-2xl xl:text-[32px] text-brand-gray-100 mt-4"
+              >
+                Мы подберём для вашего автомобиля только лучшее. Плёнку, которая
+                идеально подчеркнёт форму кузова. Тонировку, которая будет не
+                только стильной, но и максимально функциональной. Шлифовку и
+                полировку, которая вернёт лаку глубину, блеск или наоборот —
+                матовую элегантность.
+              </p>
+            </div>
 
             <div
               class="max-w-[827px] grid grid-cols-2 gap-2 sm:gap-3 lg:gap-5 2xl:gap-8 text-[.625rem] sm:text-sm md:text-base lg:text-lg xl:text-xl 2xl:text-[28px] font-semibold text-white mt-5 sm:mt-7 2xl:mt-16"
