--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
       class="max-w-base mx-auto sticky top-0 z-50 pt-5 sm:pt-8 2xl:pt-14 px-1"
     >
       <nav
-        class="2xl:h-35.5 flex-between bg-brand-whitish/10 backdrop-blur-2xl rounded-[35px] px-1 py-1 sm:px-6 2xl:px-12"
+        class="2xl:h-35.5 flex-between bg-brand-whitish/10 backdrop-blur-2xl rounded-[35px] pl-1 pr-2 py-1 sm:px-6 2xl:px-12"
       >
         <a href="#">
           <img
@@ -44,7 +44,7 @@
         </a>
 
         <ul
-          class="sm:hidden flex items-center gap-2.5 sm:gap-5 2xl:gap-14 text-[9px] sm:text-sm 2xl:text-2xl text-brand-gray"
+          class="sm:hidden flex items-center gap-2 sm:gap-5 2xl:gap-14 text-[9px] sm:text-sm 2xl:text-2xl text-brand-gray"
         >
           <li>
             <a href="#services" class="hover:text-amber-300 smooth-200"
@@ -59,7 +59,7 @@
         </ul>
 
         <ul
-          class="hidden sm:flex items-center gap-2.5 sm:gap-5 2xl:gap-14 text-[9px] sm:text-sm 2xl:text-2xl text-brand-gray"
+          class="hidden sm:flex items-center gap-2 sm:gap-5 2xl:gap-14 text-[9px] sm:text-sm 2xl:text-2xl text-brand-gray"
         >
           <li>
             <a href="#services" class="hover:text-amber-300 smooth-200"
@@ -90,7 +90,7 @@
         </a>
 
         <ul
-          class="sm:hidden flex items-center gap-2.5 sm:gap-5 2xl:gap-14 text-[9px] sm:text-sm 2xl:text-2xl text-brand-gray"
+          class="sm:hidden flex items-center gap-2 sm:gap-5 2xl:gap-14 text-[9px] sm:text-sm 2xl:text-2xl text-brand-gray"
         >
           <li>
             <a href="#about" class="hover:text-amber-300 smooth-200">О нас</a>
